<resources>
    <string name="app_name">SeaMarket</string>
    <string name="action_home">Trang chủ</string>
    <string name="action_product">Sản phẩm</string>
    <string name="action_notification">Thông báo</string>
    <string name="action_basket">Giỏ hàng</string>
    <string name="action_personal">Cá Nhân</string>
    <!-- activity đăng kí-->
    <string name="text_sodienthoai">Số điện thoại</string>
    <!--    activity người dùng-->
    <string name="personal_text_diachinhanhang">"Địa chỉ nhận hàng: "</string>
    <string name="personal_text_caidat">Cài đặt</string>
    <string name="personal_text_dieukhoanvachinhsach">Điều khoản &#xFF06; Chính sách</string>
    <string name="personal_text_phienbanungdung">Phiên bản ứng dụng</string>
    <string name="personal_text_donhang">Đơn hàng</string>

    <!--    activity home-->
    <string name="home_text_dambaochatluong">Đảm bảo chất lượng</string>
    <string name="home_text_giaohangtrong6h">Giao hàng trong 6h</string>
    <string name="home_text_thanhtoancod">Thanh toán COD</string>

    <string name="Home_text_timkiemtrenseamarket">Tìm kiếm trên Seamarket</string>
    <string name="setting_text_ngonngu">Ngôn ngữ</string>

    <string-array name="idType">
        <item>Cá</item>
        <item>Cua</item>
        <item>Tôm</item>
        <item>Sò</item>
        <item>Ốc</item>
    </string-array>
    <string name="text_sale_off">Hạ giá</string>
    <string name="text_import">Nhập Khẩu</string>
    <string name="text_selling">Bán Chạy</string>
    <string name="text_muaChung">Mua Chung</string>
    <string name="text_cothebanquantam">Có thể bạn quan tâm</string>
    <string name="text_product_ca">Cá</string>
    <string name="text_product_cua">Cua</string>
    <string name="text_product_tom">Tôm</string>
    <string name="text_product_so">Sò</string>
    <string name="text_product_oc">Ốc</string>
    <string name="text_control">Bảng điều khiển</string>
    <string name="product_text_nhacungcap">Nhà cung cấp</string>
    <string name="product_text_thongtinsanpham">Thông tin sản phẩm</string>
    <string name="product_text_loaisanpham">Loại sản phẩm:</string>
    <string name="product_text_xuatxu">"Xuất xứ: "</string>
    <string name="product_text_motasanpham">Mô tả sản phẩm</string>
    <string name="product_text_btn_themvaogiohang">Thêm vào giỏ hàng</string>
    <string name="basket_text_tongtien">Tổng tiền:</string>
    <string name="basket_text_btn_dat_hang">Đặt hàng</string>
    <string name="setting_text_language">Ngôn ngữ</string>
    <string name="setting_text_thaydoithongtin">Thay đổi thông tin</string>
    <string name="setting_logout">Đăng xuất</string>
    <string name="text_chonsoluong">Chọn số lượng</string>
    <string name="text_tamtinh">"Tạm tính: "</string>
    <string name="text_tennguoinhan">Tên người nhận:</string>
    <string name="text_tongsanpham">Tổng sản phẩm:</string>
    <string name="text_phigiaohang">Phí giao hàng:</string>
    <string name="text_tientamtinh">Tạm tính:</string>
    <string name="text_phuongthucthanhtoan">Phương thức thanh toán</string>
    <string name="text_thanhtoankhinhanhang">Thanh toán khi nhận hàng (COD)</string>
    <string name="text_btn_xacnhan">Xác nhận</string>
    <string name="text_thaydoi">Thay đổi</string>
    <string name="text_themdiachimoi">Thêm địa chỉ mới</string>
    <string name="text_donhang">Đơn hàng: </string>
    <string name="text_price">Giá:</string>
    <string name="text_soluong">Số lượng:</string>
    <string name="text_trangthai">Trạng thái:</string>
    <string name="text_trangthai_dangxuli">Đang xử lý</string>
    <string name="thongtinlienhe">Thông tin liên hệ</string>
    <string name="hovaten">Họ và tên</string>
    <string name="sodienthoai">"Số điện thoại: "</string>
    <string name="nhapdiachi">Nhập địa chỉ</string>
    <string name="admin_themsanpham">Thêm sản phẩm</string>
    <string name="admin_duyetdonhang">Duyệt đơn hàng</string>
    <string name="admin_add_loai">Loại:</string>
    <string name="admin_add_tensanpham">Tên sản phẩm</string>
    <string name="admin_add_gia">Giá sản phẩm</string>
    <string name="admin_themanh">_Thêm ảnh</string>
    <string name="add">Thêm</string>
    <string name="tenkhachhang">Tên khách hàng:</string>
    <string name="dagiaohang">Đã giao hàng</string>


</resources>