<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.Activity.Personal.SettingActivity">
    <include layout="@layout/toolbar"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/setting_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_click_view"
                android:padding="15dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="#1E1E1E"
                    android:textSize="24sp"
                    android:text="@string/setting_text_ngonngu"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_chevron_right_24" />
            </RelativeLayout>
            <View
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/grey"/>
            <RelativeLayout
                android:id="@+id/setting_change_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/custom_click_view"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="#1E1E1E"
                    android:textSize="24sp"
                    android:text="@string/setting_text_thaydoithongtin"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/ic_baseline_chevron_right_24" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/settingLogOut"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_baseline_exit_to_app_24"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/blue_color"
            android:textSize="24sp"
            android:layout_gravity="center_vertical"
            android:text="@string/setting_logout"/>
    </LinearLayout>

</RelativeLayout>